--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1> Hi there!</h1>
-    <h2> Welcome to my start</h2>
+    <h2> Welcome to my starting HTML page!</h2>
     <p> This is our paragraph</p>
     <p> This is our paragraph</p>
     <a href="">This is the link to my site</a>
